first "real" content
* add subpages
** about: background of this website and contact option
** me: stuff I've done
* add public key
* add style sheet

* todos: put up a CV, BA, MA, FP tutorial

--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
+<!DOCTYPE html>
+
 <html>
-  <head>
-    <title>Empty homepage</title>
-  </head>
-<!-- This is happens if I get sick and bored -->
-  <body bgcolor=white>
+    <meta charset="UTF-8">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="author" content="Andreas Baumbach">
+    <meta name="viewport" content="width=device-width">
+    <title>Homepage of a lazy person</title>
+    <link rel="stylesheet" href="style.css" />
 
-    <table border="0" cellpadding="10">
-      <tr>
-        <td>
+  <body>
+    <h2><a href="index.html" style="text-decoration:none;color:black">Andreas Baumbach</a></h2>
 
-        </td>
-        <td>
-          <h1>nobody shall ever find this</h1>
-        </td>
-      </tr>
-    </table>
+    <h2>Random Thoughts</h2>
+      <ul>
+        <li>I need read some more about CSS.</li>
+        <li>Manually writing HTML is more annoying than I thought.</li>
+      </ul>
+
+    <h2>If you are still not bored</h2>
+      <ul>
+        <li><a href="me.html">Find out about Me</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+
+  </body>
 </html>
