--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h2>Random Thoughts</h2>
       <ul>
-        <li>I need read some more about CSS.</li>
+        <li>I need to read some more about CSS.</li>
         <li>Manually writing HTML is more annoying than I thought.</li>
       </ul>
 
